# monopoly-simulator

./: README.md  pyproject.toml
src/: cards.py  chance.py  game.py  main.py  player.py  spaces.py
